<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/mainScreenTR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/playerXLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/playerXTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/playerXTV"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/xDifficultyRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/xHuman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humanRB" />

                <RadioButton
                    android:id="@+id/xEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easyRB"  />

                <RadioButton
                    android:id="@+id/xNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normalRB"  />

                <RadioButton
                    android:id="@+id/xNightmare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nightmareRB"  />

                <RadioButton
                    android:id="@+id/xHell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hellRB"
                    android:visibility="invisible"  />

                <RadioButton
                    android:id="@+id/xCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customDRB" />

            </RadioGroup>

            <EditText
                android:id="@+id/xCustomDifficultyET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerOLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/playerOTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/playerOTV"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/oDifficultyRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/oHuman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humanRB" />

                <RadioButton
                    android:id="@+id/oEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easyRB"  />

                <RadioButton
                    android:id="@+id/oNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normalRB"  />

                <RadioButton
                    android:id="@+id/oNightmare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nightmareRB" />

                <RadioButton
                    android:id="@+id/oHell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hellRB"
                    android:visibility="invisible"  />

                <RadioButton
                    android:id="@+id/oCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customDRB" />
            </RadioGroup>

            <EditText
                android:id="@+id/oCustomDifficultyET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                  />
        </LinearLayout>
    </TableRow>

    <Button
        android:id="@+id/startBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainScreenTR"
        android:layout_centerHorizontal="true"
        android:text="@string/startBT" />

</RelativeLayout>